add 'add user' at user

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,5 @@
 <p>user works!</p>
+<button class="add-user-bnt" mat-fab color="primary" matTooltip="Add User" matTooltipShowDelay="250"
+    matTooltipPosition="above">
+    <mat-icon>add</mat-icon>
+</button>
