--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,22 @@
     </div>
 
     <ul class="menu-items">
-      <li> <mat-icon>fact_check</mat-icon> Dashboard</li>
-      <li> <mat-icon>person</mat-icon> User</li>
+      <li routerLink="dashboard"> <mat-icon>fact_check</mat-icon> Dashboard</li>
+      <li routerLink="user"> <mat-icon>person</mat-icon> User</li>
     </ul>
   </mat-drawer>
 
   <mat-drawer-content>
 
-    <mat-toolbar>
+    <mat-toolbar color="primary">
       <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
       <span>Simpel CRM</span>
     </mat-toolbar>
 
-    <div>test</div>
+    <div class="router-container"><router-outlet></router-outlet></div>
+
+
+
   </mat-drawer-content>
 
 </mat-drawer-container>
