--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
 
 .logo-container {
     padding: 0px 16px;
-    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.20);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     min-height: 56px;
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@
 mat-toolbar {
     min-height: 56px;
     height: 56px;
-    background-color: #4c5af3;
+    // background-color: #4c5af3;
 }
 
 .menu-items {
@@ -42,6 +42,11 @@ mat-toolbar {
 
         &:hover {
             background-color: rgba(0, 0, 0, 0.1);
+
         }
     }
+}
+
+.router-container {
+    padding: 56px 16px;
 }
